<resources>
    <string name="app_name">Astralombard</string>
    <string name="back">Назад</string>
    <string name="intro_desc_1"></string>
    <string name="intro_desc_2"></string>
    <string name="intro_desc_3"></string>
    <string name="city_tip">Город</string>
    <string name="my_loans">Мои займы</string>
    <string name="my_loans_title">МОИ ЗАЙМЫ</string>
    <string name="calculator">Калькулятор</string>
    <string name="about_company">О компании</string>
    <string name="addresses">Адреса</string>
    <string name="profile">Профиль</string>
    <string name="login">Войти</string>
    <string name="login_pin">ВОЙТИ</string>
    <string name="my_loans_open_loans">ОТКРЫТЫЕ ЗАЙМЫ</string>
    <string name="my_loans_city">Город</string>
    <string name="my_loans_days_left">Остаток дней</string>
    <string name="my_loan_day_passed">Прошло дней</string>
    <string name="my_loans_period_day">Срок залога</string>
    <string name="my_loans_tenge">Тенге</string>
    <string name="my_loans_sum_to_pay">Сумма к оплате</string>
    <string name="my_loans_pay">Оплатить</string>
    <string name="my_loans_pledge_ticket">Залоговый билет</string>
    <string name="my_loans_pay_before">Оплатить до</string>
    <string name="my_loans_close_date">Дата закрытия</string>
    <string name="my_loans_history">ИСТОРИЯ ЗАЙМОВ</string>
    <string name="my_loans_order">ЗАЙМ №</string>
    <string name="details_name">Наименование</string>
    <string name="details_sample">Проба</string>
    <string name="details_item_weight">Вес изделия</string>
    <string name="details_item_weight_without">Вес без камня</string>
    <string name="details_price_for_1g">Цена за 1 грамм</string>
    <string name="details_loan_date">Дата займа</string>
    <string name="details_pledge_period">Срок залога</string>
    <string name="details_guarantee_period">Гарантийный срок</string>
    <string name="details_close_date">Дата закрытия</string>
    <string name="details_given_sum">Сумма на руки</string>
    <string name="details_sum_to_pay">СУММА К ОПЛАТЕ</string>
    <string name="details_branch_office">Филиал</string>
    <string name="details_merchandiser_name">Имя товароведа</string>
    <string name="details_total_payment_sum">Общая сумма выплаты</string>
    <string name="details_pay">ОПЛАТИТЬ</string>
    <string name="details_product">Изделие</string>
    <string name="details_days">дней</string>
    <string name="details_percent">Сумма процентов</string>
    <string name="details_fine">Сумма штрафа</string>
    <string name="details_total">Общая сумма</string>
    <string name="details_credit">Сумма на руки</string>
    <string name="calculator_choice_of_goods">Выбор товара</string>
    <string name="calculator_title">КАЛЬКУЛЯТОР</string>
    <string name="calculator_gold">ЗОЛОТО</string>
    <string name="calculator_car">АВТОМОБИЛЬ</string>
    <string name="calculator_gr_weight">Вес в граммах</string>
    <string name="calculator_day_period">Срок в днях</string>
    <string name="calculator_calculate">Рассчитать стоимость</string>
    <string name="calculator_given_sum">Сумма на руки</string>
    <string name="calculator_repayment_sum">Сумма к возврату</string>
    <string name="calculator_tg">тг.</string>
    <string name="calculator_gold_notes">Оценка изделия будет варьироваться от просчёта товароведа в филиале</string>
    <string name="calculator_car_notes">Оценка транспорта будет варьироваться от просчёта товароведа в филиале</string>
    <string name="calculator_car_30_days">30 дней</string>
    <string name="calculator_more_text">Подробнее</string>
    <string name="calculator_enter_market_price">Введите рыночную стоимость автомобиля, тг</string>
    <string name="calculator_with_drive_license">С правом вождения</string>
    <string name="calculator_more_gold_title">Правила оценки и приема золотых изделий</string>
    <string name="calculator_more_auto_title">Правила оценки и приема автотранспорта</string>
    <string name="calculator_more_gold_text">Оценка залогового имущества производится индивидуально товароведом – оценщиком - кассиром, в зависимости от ювелирного изделия. При оценке учитывается:\n
- состояние изделия (лом, пайка, отсутствие камней)\n
- наличие пробы (именника, пробирного клейма)\n
- изделия кустарного производства\n
- изделия бисмарк (до 20 гр, и выше)\n
- изделия турецкого производства\n
- изделия низкопробного качества\n\nОкончательную сумму выдачи определяет оценщик - кассир на месте, в зависимости от состояния изделия, основываясь приказа “О расценках на принимаемые ювелирные изделия” и от должностных инструкций товароведа – оценщика.</string>
    <string name="calculator_more_auto_text">К месту прибытия Вашего авто, Эксперт-оценщик производит оценку.\nМинимальный и максимальный период погашения долга от 30 дней до 1 года.\n
        - Максимальная годовая процентная ставка 90% годовых\n\nПрием авто осуществляется, в двух формах.\n\n<b>С правом вождения</b>\n\nНаше преимущество – мы выдаем автокредит под залог автомобиля с правом управления, то есть Ваша машина остается у Вас!\n\n

- 7,5 % в месяц (0,25 в день)\n
        - машины год выпуска от 2014 года\n\n<b>Без права вождения</b>\n\nАвтомобиль остается в нашем закрытом охраняемом паркинге, где он в целости и сохранности.\nПри просрочке начисляется процент 0,5 в день. Оценка автомобиля проводится также индивидуально, при наличии фотографии.\n\n

- 6,5 % в месяц (0,216 в день)\n
- машины, год выпуска от 2014 года</string>
    <string name="calculator_more_auto_with_right">С правом вождения</string>
    <string name="calculator_more_auto_without_right">Без права вождения</string>
    <string name="about_news_sales">НОВОСТИ И АКЦИИ</string>
    <string name="about_write_us">НАПИСАТЬ НАМ</string>
    <string name="about_company_title">О КОМПАНИИ</string>
    <string name="about_feedback_success_title">Уведомление</string>
    <string name="about_feedback_success_message">Ваше сообщение успешно отправлено</string>
    <string name="about_message_topic">Тема сообщения:</string>
    <string name="about_phone">Телефон:</string>
    <string name="about_message_text">Текст сообщения:</string>
    <string name="about_send">ОТПРАВИТЬ</string>
    <string name="about_text_empty_error">Заполните текст сообщения</string>
    <string name="about_phone_empty_error">Не указан телефон</string>
    <string name="about_subject_empty_error">Не указана тема сообщения</string>
    <string name="addresses_city">Город</string>
    <string name="addresses_of_branches">Адреса филиалов</string>
    <string name="addresses_choose_city">Выберите город</string>
    <string name="addresses_phones">Телефон</string>
    <string name="addresses_work_time">Время работы</string>
    <string name="addresses_address">Адрес</string>
    <string name="addresses_call_us">Позвоните нам. Звонок бесплатный</string>
    <string name="addresses_have_questions">Есть вопросы?</string>
    <string name="login_iin">ИИН</string>
    <string name="login_phone">Телефон</string>
    <string name="login_request_code">Запросить код</string>
    <string name="login_enter_code">Введите код</string>
    <string name="login_sms_code">СМС код</string>
    <string name="login_read_user_agreement">Пожалуйста, ознакомьтесь с настоящим пользовательским соглашением</string>
    <string name="login_user_agreement">Я прочитал и согласен с условиями <b>пользовательского соглашения</b></string>
    <string name="profile_city">Город</string>
    <string name="profile_fio">ФИО</string>
    <string name="profile_IIN">ИИН</string>
    <string name="profile_birth_date">Дата рождения</string>
    <string name="profile_address">Адрес</string>
    <string name="profile_phone">Телефон</string>
    <string name="profile_chose_city">ВЫБРАТЬ ГОРОД</string>
    <string name="profile_chose_city_settings">Выбрать город</string>
    <string name="profile_chose_your_city">ВЫБЕРИТЕ ВАШ ГОРОД:</string>
    <string name="profile_city_was_saved">Ваш город успешно изменён</string>
    <string name="profile_save">Сохранить</string>
    <string name="profile_confirm">Подтвердить</string>
    <string name="profile_change_pin">Изменить код доступа</string>
    <string name="profile_logout">Выйти с аккаунта</string>
    <string name="profile_ask_logout">ВЫ УВЕРЕНЫ, ЧТО\nХОТИТЕ ВЫЙТИ ИЗ АККАУНТА</string>
    <string name="profile_no">НЕТ</string>
    <string name="profile_yes">ДА</string>
    <string name="profile_enter_new_pin">Введите новый код доступа\nдля входа в приложение</string>
    <string name="profile_set_new_pin">УСТАНОВИТЕ КОД ДОСТУПА\nДЛЯ БЫСТРОГО ВХОДА</string>
    <string name="profile_confirm_new_pin">ПОВТОРИТЕ КОД ДОСТУПА\nДЛЯ ПОДТВЕРЖДЕНИЯ</string>
    <string name="profile_request_pin">Введите новый код доступа для входа в приложение</string>
    <string name="profile_enter_pin">ВВЕДИТЕ КОД ДОСТУПА</string>
    <string name="profile_forgot_pin">Забыли код доступа</string>
    <string name="profile_code">КОД ДОСТУПА</string>
    <string name="profile_ru">РУССКИЙ</string>
    <string name="profile_kz">КАЗАХСКИЙ</string>
    <string name="profile_restart_app_title">Перезапуск приложения</string>
    <string name="profile_restart_app_text">Для смены языка приложение необходимо перезапустить</string>
    <string name="profile_success_change_code_title">Уведомление</string>
    <string name="profile_success_change_code_text">Код доступа успешно изменен</string>
    <string name="error_confirm_code_text">Введенный код не совпадает. Попробуйте заново</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta, ex sit amet dictum efficitur,
        orci lectus pulvinar nisi, et auctor sapien ipsum vel felis. Nam congue nibh libero, vitae aliquet erat molestie eget.
        Maecenas imperdiet in enim et dapibus. Nunc quis eros vehicula, aliquet tellus
        non, sagittis velit. Nullam auctor, mauris vel tincidunt varius, odio augue aliquet tellus, id tincidunt velit
        neque faucibus urna. </string>
    <string name="title_activity_open_loans_details">OpenLoansDetailsActivity</string>
    <string name="skip">ПРОПУСТИТЬ</string>
    <string name="further">ДАЛЕЕ</string>
    <string name="change_city_later">позже в настройках Вы можете изменить свой город</string>
    <string name="enter_pin">ВВЕДИТЕ КОД</string>
    <string name="loading">Подождите</string>
    <string name="error">Ошибка</string>
    <string name="error_general">Произошла ошибка</string>
    <string name="ok">OK</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="no_connection_error">Возможно, проблемы с соединением</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="sample_array">
        <item>999,9</item>
        <item>750</item>
        <item>585</item>
        <item>583</item>
        <item>375</item>
    </string-array>
    <string-array name="weight_array">
        <item>1</item>
        <item>1,5</item>
        <item>2</item>
        <item>2,5</item>
        <item>3</item>
        <item>3,5</item>
        <item>4</item>
        <item>4,5</item>
        <item>5</item>
        <item>5,5</item>
        <item>6</item>
        <item>6,5</item>
        <item>7</item>
        <item>7,5</item>
        <item>8</item>
        <item>8,5</item>
        <item>9</item>
        <item>9,5</item>
        <item>10</item>
    </string-array>
    <string-array name="period_array">
        <item>5 дней</item>
        <item>10 дней</item>
        <item>15 дней</item>
        <item>20 дней</item>
        <item>25 дней</item>
        <item>30 дней</item>
    </string-array>
</resources>