<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.menu.myloans.OpenLoansDetailsActivity">

        <LinearLayout
            android:id="@+id/ll_inf"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="@+id/btn_pay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:divider="@drawable/divider"
                android:dividerPadding="0dp"
                android:orientation="vertical"
                android:showDividers="middle|end">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_sample" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_price_for_1g" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_pledge_period" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_guarantee_period" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculator_given_sum" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_branch_office" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_merchandiser_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/details_sum_to_pay" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:divider="@drawable/divider"
                android:dividerPadding="0dp"
                android:orientation="vertical"
                android:showDividers="middle|end">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    style="@style/LoanDetailsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/details_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sample"
                    style="@style/LoanDetailsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_sample" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_gramPrice"
                    style="@style/LoanDetailsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_price_for_1g" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_zalogPeriod"
                    style="@style/LoanDetailsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_pledge_period" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LoanDetailsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_guarantee_period" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_givenSum"
                    style="@style/LoanDetailsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculator_given_sum" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_office"
                    style="@style/LoanDetailsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_branch_office" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_merchandiser"
                    style="@style/LoanDetailsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_merchandiser_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="15dp"
                    android:text="100 000 тг"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/my_loans_sum_to_pay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>