<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/profile_ask_logout"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/profile_yes"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/btn_no"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_no"
            app:layout_constraintBottom_toBottomOf="@+id/btn_yes"
            app:layout_constraintEnd_toStartOf="@+id/btn_yes"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="@+id/btn_yes" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>