<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="kz.astralombard.home.menu.myloans.data.Item" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/ll_inf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/btn_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_loan_number">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="@drawable/divider"
            android:dividerPadding="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoanDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_height="wrap_content"
                android:text="@string/details_name" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoanDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_sample" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoanDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_item_weight" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoanDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_item_weight_without" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoanDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_price_for_1g" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/LoanDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculator_given_sum" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="@drawable/divider"
            android:dividerPadding="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                style="@style/LoanDetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{item.Name}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sample"
                style="@style/LoanDetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.Sample}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weight"
                style="@style/LoanDetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(item.Weight)}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weight_without_stone"
                style="@style/LoanDetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(item.WeightWithoutStone)}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_gramPrice"
                style="@style/LoanDetailsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.GramPrice}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_givenSum"
                style="@style/LoanDetailsValue"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(item.HandAmount)}" />

        </LinearLayout>

    </LinearLayout>
        <View
            app:layout_constraintTop_toBottomOf="@id/ll_inf"
            android:layout_width="match_parent"
            android:background="@drawable/divider"
            android:layout_height="1dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>