<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.menu.login.presentation.LoginFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_content"
        style="@style/WrapContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/astra_logo" />

        <EditText
            android:id="@+id/et_iin"
            style="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/login_iin"
            android:text="961213350889"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo" />

        <TextView
            android:id="@+id/tv_enter_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/login_iin"
            android:padding="10dp"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/login_phone"
            android:text="+77472661736"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/et_iin"
            app:layout_constraintStart_toStartOf="@+id/et_iin"
            app:layout_constraintTop_toBottomOf="@+id/et_iin" />

        <EditText
            android:id="@+id/et_enter_code"
            style="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLength="4"
            android:gravity="center"
            android:visibility="gone"
            android:hint="@string/login_sms_code"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/tv_enter_code"
            app:layout_constraintStart_toStartOf="@+id/tv_enter_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_code" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="8dp"
            android:text="@string/login_user_agreement"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/et_phone"
            app:layout_constraintStart_toStartOf="@+id/et_phone"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_request_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/login_request_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_content" />


</android.support.constraint.ConstraintLayout>